--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "scripts": {
     "start": "node app",
-    "dev": "nodemon app"
+    "dev": "nodemon app & browserify videChat.js -o tests/bundle.js",
+    "test": "browserify chat.js -o bundle.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "browserify": "^16.2.3",
     "express": "^4.17.0",
+    "getusermedia": "^2.0.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
-    "nodemailer": "^6.1.1"
+    "nodemailer": "^6.1.1",
+    "simple-peer": "^9.0.0",
+    "wrtc": "^0.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
