--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "browserify": "^16.2.3",
     "express": "^4.17.0",
     "getusermedia": "^2.0.1",
+    "html-pdf": "^2.2.0",
+    "multer": "^1.4.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "nodemailer": "^6.1.1",
